[gd_scene load_steps=9 format=2]

[ext_resource path="res://BabaGodotLib/Fonts/BoldCapsPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BabaGodotLib/UI/Menu/OptionButtons/MenuOptionBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://BabaGodotLib/UI/Menu/MenuBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menus/SaveLoadMenus/LoadGameMenu/LoadGameMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="LoadGameMenu" instance=ExtResource( 3 )]
script = ExtResource( 4 )
opt_container_path = "VBoxContainer/VBoxContainer2"

[node name="ColorRect" type="ColorRect" parent="." index="0"]
modulate = Color( 0, 0, 0, 0.4 )
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="ColorRect" index="0"]
modulate = Color( 0, 0, 0, 0.6 )
margin_left = 80.0
margin_top = 70.0
margin_right = 880.0
margin_bottom = 470.0
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="." index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -176.0
margin_right = 270.0
margin_bottom = 176.0
custom_constants/separation = 88
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer" index="0"]
margin_right = 540.0
margin_bottom = 88.0
rect_min_size = Vector2( 540, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSaveName" type="Label" parent="VBoxContainer/VBoxContainer" index="0"]
margin_right = 540.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.631373, 0.631373, 0.631373, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Save Name : "
align = 1
valign = 1
uppercase = true

[node name="LoadSaveDate" type="Label" parent="VBoxContainer/VBoxContainer" index="1"]
margin_top = 23.0
margin_right = 540.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.631373, 0.631373, 0.631373, 1 )
text = "Save Date :"
align = 1
valign = 1
uppercase = true

[node name="LoadSaveXion" type="Label" parent="VBoxContainer/VBoxContainer" index="2"]
margin_top = 46.0
margin_right = 540.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.631373, 0.631373, 0.631373, 1 )
text = "Save Xion : "
align = 1
valign = 1
uppercase = true

[node name="LoadSaveGear" type="Label" parent="VBoxContainer/VBoxContainer" index="3"]
margin_top = 69.0
margin_right = 540.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.631373, 0.631373, 0.631373, 1 )
text = "Save Gear : "
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer" index="1"]
margin_top = 176.0
margin_right = 540.0
margin_bottom = 352.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" parent="VBoxContainer/VBoxContainer2" index="0" instance=ExtResource( 2 )]
margin_right = 540.0
text = "Slot 1"

[node name="Slot2" parent="VBoxContainer/VBoxContainer2" index="1" instance=ExtResource( 2 )]
margin_top = 44.0
margin_right = 540.0
margin_bottom = 88.0
text = "Slot 2"

[node name="Slot3" parent="VBoxContainer/VBoxContainer2" index="2" instance=ExtResource( 2 )]
margin_top = 88.0
margin_right = 540.0
margin_bottom = 132.0
text = "Slot 3"

[node name="BackToMenu" parent="VBoxContainer/VBoxContainer2" index="3" instance=ExtResource( 2 )]
margin_top = 132.0
margin_right = 540.0
margin_bottom = 176.0
text = "Back To Menu"
